# homeassistant-bedrock-ha-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  apparmor.txt  hacs.json  pyproject.toml  repository.json  requirements-dev.txt  requirements-test.txt  test_bedrock.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
custom_components/: AGENTS.md
custom_components/bedrock_conversation/: AGENTS.md  __init__.py  aws_session.py  bedrock_client.py  config_flow.py  const.py  conversation.py  device_info.py  manifest.json  messages.py  runtime_data.py  sensor.py  strings.json  stt.py  tts.py  usage_tracker.py  vision.py
custom_components/bedrock_conversation/config_tools/: __init__.py  automation.py  helper.py  lovelace.py  pending.py  registry.py  scene.py  script.py  undo.py
custom_components/bedrock_conversation/config_tools/ha_client/: automation.py  helper.py  lovelace.py  registry.py  scene.py  script.py
custom_components/bedrock_conversation/translations/: AGENTS.md  en.json
custom_components/bedrock_ha_agent/: AGENTS.md  __init__.py  _ha_api_smoke.py  ai_task.py  aws_cache.py  aws_session.py  bedrock_client.py  config_flow.py  const.py  conversation.py  conversation_helpers.py  device_info.py  manifest.json  messages.py  runtime_data.py  sensor.py  services.yaml  strings.json  stt.py  tts.py  usage_tracker.py  utils.py  vision.py
custom_components/bedrock_ha_agent/config_tools/: AGENTS.md  __init__.py  automation.py  diff.py  helper.py  lovelace.py  pending.py  registry.py  scene.py  script.py  undo.py  validation.py
custom_components/bedrock_ha_agent/config_tools/ha_client/: AGENTS.md  __init__.py  automation.py  health.py  helper.py  history.py  logbook.py  lovelace.py  registry.py  repairs.py  scene.py  script.py  states.py  system_log.py
custom_components/bedrock_ha_agent/diagnostics/: AGENTS.md  __init__.py  base.py  history.py  lifecycle.py  logs.py  services.py  states.py
custom_components/bedrock_ha_agent/translations/: AGENTS.md  en.json
tests/: AGENTS.md  conftest.py  test_ai_task.py  test_ai_task_image.py  test_api_entry_resolution.py  test_automation_object_id.py  test_aws_cache.py  test_bedrock_client.py  test_bedrock_tool_schema.py  test_concurrent_voice.py  test_config_editing_automation.py  test_config_editing_end_to_end.py  test_config_editing_helper.py  test_config_editing_lovelace.py  test_config_editing_registry.py  test_config_editing_scene.py  test_config_editing_script.py  test_config_editing_tool_base.py  test_config_editing_usage.py  test_config_editing_voice.py  test_config_flow.py  test_conversation_entity_migration.py  test_device_context.py  test_diagnostics_budget.py  test_diagnostics_config_editing_nonregression.py  test_diagnostics_flag_off.py  test_diagnostics_ha_api_smoke.py  test_diagnostics_redact_and_cap.py  test_diagnostics_reload_undo.py  test_diff.py  test_extended_service_call.py  test_ha_api_smoke.py  test_ha_client_lovelace.py  test_ha_client_registry.py  test_ha_client_shape.py  test_init.py  test_no_file_io.py  test_past_tense_correction.py  test_past_tense_tokens.py  test_pending_manager.py  (+9 more)
translations/: AGENTS.md
