[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant_bedrock_ha_agent"
version = "1.1.0"
description = "Bedrock Home Assistant Agent — Claude-powered conversation + config editing for Home Assistant"
readme = "README.md"
authors = [{name = "sparkleHazard", email = "sparklehazard@protonmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.0",
    "webcolors>=24.8.0"
]

[project.urls]
Homepage = "https://github.com/sparkleHazard/homeassistant-bedrock-ha-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
